--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -67,7 +67,7 @@ _zstd_compression=y
 _nf_cone=y
 
  pkgbase=linux-nspa
-_major=6.2
+_major=6.3
 #_minor=4
 #_minorc=$((_minor+1))
 #_rcver=rc8
@@ -76,17 +76,17 @@ _stable=${_major}.${_minor}
 #_stable=${_major}
 #_stablerc=${_major}-${_rcver}
 #_srcname=linux-${_stable}
-_srcname=linux-rt-devel-6.2-rt3
+_srcname=linux-rt-devel-6.3-rc3-rt5
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=16
+pkgrel=1
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'texlive-latexextra' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'zstd' 'xmlto' 'git' 'gcc' 'gcc-libs' 'glibc' 'binutils' 'make' 'patch')
 source=(
-  "https://git.kernel.org/pub/scm/linux/kernel/git/rt/linux-rt-devel.git/snapshot/linux-rt-devel-6.2-rt3.tar.gz"
+  "https://git.kernel.org/pub/scm/linux/kernel/git/rt/linux-rt-devel.git/snapshot/linux-rt-devel-6.3-rc3-rt5.tar.gz"
   "config"
   "config_surface7"
   "auto-cpu-optimization.sh"
@@ -115,21 +115,11 @@ source=(
   "0022-kt-vm-mm_optimizations.patch"
   "0023-v2_sched-sched_fork-optimizations.patch"
   "0024-Kernel_tuning-CONFIG_NSPA.patch"
-  "0025-workqueue-destroy_worker_vs_isolated_CPUs.patch"
   "0026-Add_support_for_epoll_min_wait.patch"
   "0027-cgroup-cpuset-Task_migration_optimization.patch"
-  "0030-Microsoft_Surface_Support-6.1.patch"
-  "0034-qspinlock-Optimize_pending_state_waiting_for_unlock.patch"
-  "0036-locking-rwbase-Mitigate_indefinite_writer_starvation_v4.patch"
+  "0030-Microsoft_Surface_Support-6.2.patch"
   "0037-pm-cpuidle_vs_preempt_rt.patch"  
   "0039-sched-Fix-put_task_struct-calls-under-PREEMPT_RT.patch"
-  "0040-exit-Detect_and_fix_irq_disabled_state_in_oops.patch"
-  "0041-locking-rwsem-Fix_rwsem_bugs.patch"
-  "0042-iwlwifi-Add_missing_check_for_alloc_ordered_workqueue.patch"
-  "0047-linux-git-updates_1.patch"
-  "0048-linux-git-updates_2.patch"
-  "0049-sched-rt_pick_next_rt_entity-check list_entry.patch"
-  "0050-sched-fair-Wake-short-task-on-current-CPU-v6.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -140,8 +130,6 @@ prepare() {
 
     cd ${srcdir}/$_srcname
 
-    echo "Setting version..."
-    scripts/setlocalversion --save-scmversion
     echo "-$pkgrel" > localversion.10-pkgrel
     echo "${pkgbase#linux}" > localversion.20-pkgname
 
@@ -471,9 +459,9 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha256sums=('c565a2e5f363fcf1cad30c722982524e92efecb7c53e15f704df35b477831389'
-            '7d2984504a61ec26d82fec0f7c25ab8d2fe7d82546f1d4a39cc85dd0301d9bf9'
-            'ccf3861eefa7174c01356fbfaa07d2bd442066c31618351ac355a83ba69fa563'
+sha256sums=('3d9204c8fa3f4bc6c048f970c65be558cd351a8f7e3e4c3e9fa1a25de3435e4a'
+            'b46d9ad0b119a227f754c2aa8803daf328dc7cafa15280252b5b6a6ae163980f'
+            '0f33b112f98312fde160254bcb0da7e143862f6b0863277ad85bde9588226537'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
             '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
             '35a7cde86fb94939c0f25a62b8c47f3de0dbd3c65f876f460b263181b3e92fc0'
@@ -500,19 +488,9 @@ sha256sums=('c565a2e5f363fcf1cad30c722982524e92efecb7c53e15f704df35b477831389'
             'ad0547795b09249df3184311a88eaf5c6a146ae43f1b74b7479853ff3d97a708'
             '6763b3ce2e74b474445f455fd45cf82554e61d53a56ec50a73592710031b9383'
             '291eb19ef27bc9ece3f8afc8496b324b049af5ee961f6dba034497dd26918c69'
-            '3e77a086f598ae68b8271aff793d6bc0c4734c62a7bd394e1942925065b406d6'
             '9fca36d6492c6ab4244f197f3cf5771d50b8bdad6061987a36bdc9a91cec0aa8'
             'd39a84348d7ecdef83262f708c5ef3676f0f6d5bfafc9d6e9ae01026cebddf13'
-            '6266b4f5bef3dd5e11439505ede25edf400caf65447b35aeea0f045f1466860d'
-            'b516980c9d6c26c4bc214a9543f8727a601305fb67adc715c937f33b12c8defb'
-            'f80256e4c09cba4f2f48dcfca1f75e393189c9eabdcbcaef252b9b16546c2ad5'
+            '60653b558112faef9c0cd759614f9c0b42cb421247bb9af63d49060b313106e6'
             '01cc1c601a2da6899b0ce85cbb26a48550ad8fbbfef3acea33ff150d5a48e7fd'
-            '4e0a09668f30e9351a741600b01263498a60fe258ea4e5beb96b6cd197de1413'
-            '1304b96f81d568aa7745cc0039fe5c7ed51531ef73456d29c409b906e27d5647'
-            '28c7f25a3e6bd2d6b381b37e6a869f74224aa08b8e8b38c2c256875f218a6dad'
-            '182c50f8a2c913a7dd4bd3844a25b696798cb08456ba7d49d265efb17cad3195'
-            'fb093df4ece2422864c7d7f038e1d06dc49e32c78d6499cbad3ff0a9d771045f'
-            'b68091128cebde85455f6d24c5048447e33b1e32b2fcc104a6aa942b95de871c'
-            '68a007213f4c82d34890d8ebcae31385976d046ffb663ec9e30716d8e7695cdc'
-            '8fb02de2fcc82386041e0350c17762235462d1d858e6555695761074b1ffe5a8')
+            '4e0a09668f30e9351a741600b01263498a60fe258ea4e5beb96b6cd197de1413')
 
