--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -76,17 +76,17 @@ _stable=${_major}.${_minor}
 #_stable=${_major}
 #_stablerc=${_major}-${_rcver}
 #_srcname=linux-${_stable}
-_srcname=linux-rt-devel-6.3-rc7-rt9
+_srcname=linux-rt-devel-6.3-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=7
+pkgrel=8
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'texlive-latexextra' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'zstd' 'xmlto' 'git' 'gcc' 'gcc-libs' 'glibc' 'binutils' 'make' 'patch')
 source=(
-  "https://git.kernel.org/pub/scm/linux/kernel/git/rt/linux-rt-devel.git/snapshot/linux-rt-devel-6.3-rc7-rt9.tar.gz"
+  "https://git.kernel.org/pub/scm/linux/kernel/git/rt/linux-rt-devel.git/snapshot/linux-rt-devel-6.3-rt11.tar.gz"
   "config"
   "config_surface7"
   "auto-cpu-optimization.sh"
@@ -105,7 +105,6 @@ source=(
   "0012-kt-rtmutex-no-rcu-lock-while-spinning.patch"
   "0013-kt-timekeeping-suspend-fixes.patch"
   "0014-kt-pm-suspend_patches.patch"
-  "0015-sched-fix_bad_task_migration_for_rt_tasks.patch"
   "0016-rtmutex-Limit_number_of_lock_stealing_for_non-RT_waiters.patch"
   "0017-schedutil-Fix_deadlock_between_cpuset_and_cpu_hotplug.patch"
   "0018-sched-Add_latency_priority_for_CFS_class.patch"
@@ -459,7 +458,7 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha256sums=('aba9b9428b18f5a647c9fd650fd348bf0dcefa33514956ff9ad6569eee836b79'
+sha256sums=('5a399d3318f99ee2ddb7ebb61ac27b296509f637df36598adc3177408998f80d'
             'b46d9ad0b119a227f754c2aa8803daf328dc7cafa15280252b5b6a6ae163980f'
             '0f33b112f98312fde160254bcb0da7e143862f6b0863277ad85bde9588226537'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
@@ -478,7 +477,6 @@ sha256sums=('aba9b9428b18f5a647c9fd650fd348bf0dcefa33514956ff9ad6569eee836b79'
             '53bc1fc5f0c44072222c67ce5fa53a729643d5269d391b742bab1834bfe4d313'
             '2b0897c7ce14feef108c856abed79de52a761a3001f9c835e1f857d1ff275ae3'
             '5c902ea52d3257ffea9399183499feeb59b101f79b75975d5f30ade86f2798d9'
-            'da259147de1c555f52558a1a6f6070e96b5f868713a274ffb78381baa9047af7'
             'e22faa7811a3de10affe5f7e6d671f263599c75f9f78cca6e3cdf7a9e36d71de'
             'ba640b93b7d4bce58b15ad2232f0547007b725c2f518a8b19902d45632da0a47'
             '1051e30482111b87debb7fbea00bacc972fe74778d1c27c6f7b3d7ef78bb96c4'
@@ -492,5 +490,5 @@ sha256sums=('aba9b9428b18f5a647c9fd650fd348bf0dcefa33514956ff9ad6569eee836b79'
             '54acd4c36cbd4ababccc8dcb0dcc6ae5e5cd8393ced63c65af2f84e7c3ec42f9'
             '01cc1c601a2da6899b0ce85cbb26a48550ad8fbbfef3acea33ff150d5a48e7fd'
             '4e0a09668f30e9351a741600b01263498a60fe258ea4e5beb96b6cd197de1413'
-            'f081ab0bc0e2718d570f3571f0b89b3b445b9ffed6f8812fae48acd47d61fc37')
+            '876c087a4c7a55a42f61696361cf037b8428d36f77b730b6539e49566bb6d8ed')
 
