Linux-NSPA: ssam concurrency. timers fixes. misc
 -> set rr timeslice back to 10ns
 -> ssam aggregator concurrency / workqueues
 -> timers fixes and cleanups

Signed-off-by: jordan Johnston <johnstonljordan@gmail.com>

--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -79,7 +79,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-6.3.1
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=10
+pkgrel=11
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -120,6 +120,7 @@ source=(
   "0037-pm-cpuidle_vs_preempt_rt.patch"  
   "0039-sched-Fix-put_task_struct-calls-under-PREEMPT_RT.patch"
   "0052-sched-Introduce-mm_cid-runqueue-cache.patch"
+  "0061-posix-timers-Fixes-and-cleanups.patch"
   "0056-misc-sched-timers_fixes_temp-6.4.patch"
 )
 
@@ -472,7 +473,7 @@ sha256sums=('78620fb4a7d5e0db1d4eb8d5b1c6e207ba5d19564efa63967a59b6daf89b3f2a'
             '4f715ec191c760ede34963ea449c2f12cd58813cd0fa3a684297ab0f45c6ff49'
             '8e5edc5ae5282fae35684006f0aeea41c16523dc0482891dc6c15e40e87f6a53'
             '36928ee323a84d8eb75460619b8e2b6493ea6e03f438c0820f73aa79a58cf9b2'
-            'ace0373b6f82bb62123b156e10c17cf0361ab826fd313eba74ea945543aad3aa'
+            '05616703ad898f967b7055bdc6dc6c5aab33257005c2ef9d87d55af15c12927b'
             '925b3edafe5aae0e577a5a51f653ef0a93d4299c44e9dcba13882010d4bc58ee'
             '5b1a8092837cd06a57becbe8cace02c7da445761e0e6d53ea25d9f966b57ab3b'
             '815a609564ede2009837ff09843d89e4735467bd2a14fd89a610e14cb73f2587'
@@ -490,9 +491,10 @@ sha256sums=('78620fb4a7d5e0db1d4eb8d5b1c6e207ba5d19564efa63967a59b6daf89b3f2a'
             '6763b3ce2e74b474445f455fd45cf82554e61d53a56ec50a73592710031b9383'
             '291eb19ef27bc9ece3f8afc8496b324b049af5ee961f6dba034497dd26918c69'
             '9fca36d6492c6ab4244f197f3cf5771d50b8bdad6061987a36bdc9a91cec0aa8'
-            '54acd4c36cbd4ababccc8dcb0dcc6ae5e5cd8393ced63c65af2f84e7c3ec42f9'
+            '523258663f58775465c24efc01267342401c5396e5ab55fe90f3b7a93baa3103'
             '01cc1c601a2da6899b0ce85cbb26a48550ad8fbbfef3acea33ff150d5a48e7fd'
             '4e0a09668f30e9351a741600b01263498a60fe258ea4e5beb96b6cd197de1413'
             '876c087a4c7a55a42f61696361cf037b8428d36f77b730b6539e49566bb6d8ed'
+            '1f0dca248547cf093323c21a20ffe4b99baf2e95b3a1757b0fe367b6ae5c51cd'
             '5ca7655602cc1da2141db4921570d47612beeb9c18d52639ae44e87fa2aa1af0')
 
