--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -67,7 +67,7 @@ _zstd_compression=y
 _nf_cone=y
 
  pkgbase=linux-nspa
-_major=6.4.7
+_major=6.5
 _minor=0
 #_minorc=$((_minor+1))
 #_rcver=rc8
@@ -76,21 +76,20 @@ _stable=${_major}.${_minor}
 #_stable=${_major}
 #_stablerc=${_major}-${_rcver}
 #_srcname=linux-${_stable}
-_srcname=linux-6.4.7
+_srcname=linux-rt-devel-6.5-rc7-rt4
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=7
+pkgrel=1
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'texlive-latexextra' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'zstd' 'xmlto' 'git' 'gcc' 'gcc-libs' 'glibc' 'binutils' 'make' 'patch')
 source=(
-  "https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-6.4.7.tar.xz"
+  "https://git.kernel.org/pub/scm/linux/kernel/git/rt/linux-rt-devel.git/snapshot/linux-rt-devel-6.5-rc7-rt4.tar.gz"
   "config"
   "config_surface7"
   "auto-cpu-optimization.sh"
-  "0000-patch-6.4.6-rt8.patch"
   "0000-more-uarches-for-kernel-5.17+.patch"
   "0001-ClearLinux-patchwork.patch"
   "0002-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch"
@@ -110,14 +109,12 @@ source=(
   "0018-sched-Add_latency_priority_for_CFS_class.patch"
   "0019-hid-wacom-Silence_log_spam.patch"
   "0022-kt-vm-mm_optimizations.patch"
-  "0023-v2_sched-sched_fork-optimizations.patch"
   "0024-Kernel_tuning-CONFIG_NSPA.patch"
   "0026-Add_support_for_epoll_min_wait.patch"
   "0030-Microsoft_Surface_Support-6.4.patch"
   "0037-pm-cpuidle_vs_preempt_rt.patch"  
   "0039-sched-Fix-put_task_struct-calls-under-PREEMPT_RT.patch"
   "0040-Scheduler-IPC-support-v6.4.patch"
-  "0061-posix-timers-Fixes-and-cleanups.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -457,11 +454,10 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha256sums=('de143cb61dcaa756c05f56ff35144316d810615819518a33e34754f064c4a7d8'
+sha256sums=('e2a591f4431561a9cc205a82d3494976b4b82d78c687bd52010aedba1da6fce2'
             '5dd627ec8feeb026e9be070eedc137ae2febd6ee4e0234a569bc056043f45ed6'
             'd68f8077d29bbbb697daeeb4af20e82a53455a9dd5736e47679bb5f4588f5c49'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
-            'bf5bd4ce6cb489c9b05e77fc83fb03d0aa1ab1b3a5dcaf9480dc83091ad28c4e'
             '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
             '35a7cde86fb94939c0f25a62b8c47f3de0dbd3c65f876f460b263181b3e92fc0'
             '5c2a0c96dfa0909f1def1bf9ef0ad9b7e1b90263ca751a2cbd0956d009f0f7cb'
@@ -478,15 +474,13 @@ sha256sums=('de143cb61dcaa756c05f56ff35144316d810615819518a33e34754f064c4a7d8'
             '2b0897c7ce14feef108c856abed79de52a761a3001f9c835e1f857d1ff275ae3'
             '5c902ea52d3257ffea9399183499feeb59b101f79b75975d5f30ade86f2798d9'
             'ba640b93b7d4bce58b15ad2232f0547007b725c2f518a8b19902d45632da0a47'
-            '1051e30482111b87debb7fbea00bacc972fe74778d1c27c6f7b3d7ef78bb96c4'
+            '33f7ef25a6957449794b40923719cd02dc3d23b02e7c75b1bf0a42b5debf4b9b'
             '59b410a6cbe6a33c91f54139e4a710fbd2dc29e771d60d49b7ec715d3d7e12fe'
-            'ad0547795b09249df3184311a88eaf5c6a146ae43f1b74b7479853ff3d97a708'
-            '6763b3ce2e74b474445f455fd45cf82554e61d53a56ec50a73592710031b9383'
-            '291eb19ef27bc9ece3f8afc8496b324b049af5ee961f6dba034497dd26918c69'
+            '17b598ef3e08d6444f9e9c29c32719ff005f940d07589a05e6660597098b08b1'
+            '96e2388bbefafc47b48da2ea8e58d9a9fa6fe4c9d8e4a38e4100e1c738f51e53'
             '7b53a72ebd7dd27a422712e106d65e0365fbefd9b81010a15eb191df079441d4'
-            '89610e9f33d0af6b45ce4e8fd05d2a0a8473f47e6bee5955e463a5ef74c9b25d'
+            'a9cba777167c44e8b88a40453023f47b2a8147b4e1691949a8107d53c0930ba4'
             '01cc1c601a2da6899b0ce85cbb26a48550ad8fbbfef3acea33ff150d5a48e7fd'
             '4e0a09668f30e9351a741600b01263498a60fe258ea4e5beb96b6cd197de1413'
-            '3f25d44ecc184d7e9108d3d0531dd00d230c791c57cb34501130fe2e5774ef65'
-            'e9fdd59c54071ec2d9212b3d0d74e6462f273c6f88d59f1892a5f914c6d55029')
+            '622497e8523bdb9e46eb8e1e43933bd6c597b0cb2d51df0e96ed7a660ea97afd')
 
