--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -76,17 +76,17 @@ _stable=${_major}.${_minor}
 #_stable=${_major}
 #_stablerc=${_major}-${_rcver}
 #_srcname=linux-${_stable}
-_srcname=linux-rt-devel-6.6-rc2-rt4
+_srcname=linux-rt-devel-6.6-rc3-rt5
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=2
+pkgrel=3
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'texlive-latexextra' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'zstd' 'xmlto' 'git' 'gcc' 'gcc-libs' 'glibc' 'binutils' 'make' 'patch')
 source=(
-  "https://git.kernel.org/pub/scm/linux/kernel/git/rt/linux-rt-devel.git/snapshot/linux-rt-devel-6.6-rc2-rt4.tar.gz"
+  "https://git.kernel.org/pub/scm/linux/kernel/git/rt/linux-rt-devel.git/snapshot/linux-rt-devel-6.6-rc3-rt5.tar.gz"
   "config"
   "config_surface7"
   "auto-cpu-optimization.sh"
@@ -115,6 +115,8 @@ source=(
   "0039-sched-Fix-put_task_struct-calls-under-PREEMPT_RT.patch"
   "0040-Scheduler-IPC-support-v6.6.patch"
   "0120-Softirq-Fix_lock_imbalance_in_local_bh.patch"
+  "0121-sched-rt-Make_rt_rq-pushable_tasks_updates_drive_rto_mask.patch"
+  "0122-sched-rt-Fix_live_lock_between_select_fallback_rq-and_RT_push.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -456,7 +458,7 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha256sums=('5d3d669a63d17c03fd3d3851a4bc4f059ca7ffb0b79dc9ce448e8c7466b93af9'
+sha256sums=('e6c2d5ec28c951a96d079de71904cb4b837bbd3502fc11ca41f62a93acb1ed10'
             '5dd627ec8feeb026e9be070eedc137ae2febd6ee4e0234a569bc056043f45ed6'
             'd23b2151271df928bab22d348fb75a16084f70aea2ff4bc0fb8754a063b2bc46'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
@@ -484,5 +486,7 @@ sha256sums=('5d3d669a63d17c03fd3d3851a4bc4f059ca7ffb0b79dc9ce448e8c7466b93af9'
             '01cc1c601a2da6899b0ce85cbb26a48550ad8fbbfef3acea33ff150d5a48e7fd'
             '4e0a09668f30e9351a741600b01263498a60fe258ea4e5beb96b6cd197de1413'
             'd7f0cdaa50c02e81c51d12ce9112b7312595d1dd50513c2b55315a13d7a8bc1b'
-            '57fb1f13bc4cedf471523e0b043962971caa4db107d6e83a527056103ebaf9dc')
+            '57fb1f13bc4cedf471523e0b043962971caa4db107d6e83a527056103ebaf9dc'
+            '133c0522902dd8b23bf04ddf7e6e1ca84fb3222e04ffcb15822e1c2cecc01956'
+            '57fbc9ba73b543e77dddce4293c61844f3fcecb62d9ae53c7bda9410eef5db45')
 
