--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -76,7 +76,7 @@ _stable=${_major}.${_minor}
 #_stable=${_major}
 #_stablerc=${_major}-${_rcver}
 #_srcname=linux-${_stable}
-_srcname=linux-rt-devel-6.6-rc6-rt10
+_srcname=linux-6.6
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
 pkgrel=10
@@ -86,7 +86,8 @@ license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'texlive-latexextra' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'zstd' 'xmlto' 'git' 'gcc' 'gcc-libs' 'glibc' 'binutils' 'make' 'patch')
 source=(
-  "https://git.kernel.org/pub/scm/linux/kernel/git/rt/linux-rt-devel.git/snapshot/linux-rt-devel-6.6-rc6-rt10.tar.gz"
+  "https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-6.6.tar.xz"
+  "0000-patch-6.6-rt10.patch"
   "config"
   "config_surface7"
   "auto-cpu-optimization.sh"
@@ -457,7 +458,8 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha256sums=('ae786b2583f73d4f4bee2ab45a58d7fc6e66faa22511cbf7c9dce875b54aa352'
+sha256sums=('d926a06c63dd8ac7df3f86ee1ffc2ce2a3b81a2d168484e76b5b389aba8e56d0'
+            '923b48efbafdfd8976f436868a0d5c655313c6d2f85a5a7bb8e0ae90aecc7157'
             '23ec0f372fabde289fb32a6af638c6cd0d9771a57354b5356970422829ad9917'
             'd23b2151271df928bab22d348fb75a16084f70aea2ff4bc0fb8754a063b2bc46'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
